# game-of-life

./: .gitignore  Cargo.toml  index.html  index.js  package.json  webpack.config.js
.github/workflows/: ci.yml
src/: lib.rs
tests/: web.rs
www/: index.html  index.js  package.json  webpack.config.js
