[package]
name = "game-of-life"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen="^0.2.92"
wasm-bindgen-test = "0.3.34"
web-sys={version="0.3.69", features=["console"]}
rand={version="^0.8.5"}
getrandom = { version = "^0.2", features = ["js"] }
fixedbitset = { version = "0.5.7" }